here i am made a change in tile section and h3

--- a/list.html
+++ b/list.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>personalfile</title>
 </head>
 <body>
-    <h3>hii my friends</h3>
+    <h3>hi welcome to the new world of learning.just enjoy your learning process</h3>
 </body>
 </html>
