check the change on the body section of html

--- a/list.html
+++ b/list.html
@@ -6,6 +6,6 @@
     <title>personalfile</title>
 </head>
 <body>
-    <h3>hi welcome to the new world of learning.just enjoy your learning process</h3>
+    <h3 style="background-color: aqua; border: 19px;">hi welcome to the new world of learning.just enjoy your learning process</h3>
 </body>
 </html>
